[package]
name = "zeronet_cryptography"
version = "0.2.0"
authors = ["ZeroNetX <zeronet.dev>"]
edition = "2021"
description = "ZeroNetX cryptography helper library"
documentation = "http://www.github.com/ZeroNetX/zeronet_cryptography"
readme = "README.md"
homepage = "http://www.github.com/ZeroNetX/zeronet_cryptography"
repository = "http://www.github.com/ZeroNetX/zeronet_cryptography"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "~0.25"
ripemd160 = "~0.9.0"
secp256k1 = { version = "~0.19.0", features = ["recovery", "rand", "std", "rand-std"] }
base64 = "~0.13.0"
sha2 = "~0.9.0"
thiserror = "~1.0"
hex = "0.4.3"
